--- a/style.css
+++ b/style.css
@@ -38,7 +38,7 @@
   line-height: 20px;
 }
   
-   .1 box {
+   .onebox {
   margin: 2px;
   width: 20%; 
   height: 450px; 
@@ -50,7 +50,7 @@
   align-items: top;
   justify-content: left;
 }
-   .2 box {
+   .2box {
   margin: 2px;
   width: 20%; 
   height: 450px; 
@@ -62,7 +62,7 @@
   align-items: bottom;
   justify-content: left;
 }
-   .3 box {
+   .Threebox {
   margin: 2px;
   width: 20%; 
   height: 450px; 
@@ -74,7 +74,7 @@
   align-items: top;
   justify-content: right;
 }
-   .4 box {
+   .Fourbox {
   margin: 2px;
   width: 20%; 
   height: 450px; 
@@ -86,9 +86,7 @@
   align-items: bottom;
   justify-content: right;
 }
-  }
- 
-   .a box {
+   .abox {
   margin: 10px;
   width: 30%; 
   height: 500px; 
@@ -98,7 +96,7 @@
   background-size: contain;
 }
 
-  .b box {
+  .bbox {
   margin: 10px;
   width: 30%; 
   height: 500px; 
@@ -107,7 +105,7 @@
   background-repeat: no-repeat;
   background-size: contain;
 }
-  .c box {
+  .cbox {
   margin: 10px;
   width: 30%; 
   height: 500px; 
@@ -117,7 +115,7 @@
   background-size: contain;
 }
 
-  .d box {
+  .dbox {
   margin: 10px;
   width: 30%; 
   height: 500px; 
@@ -125,6 +123,8 @@
   background-image: url("jpg 店内 image 3.JPG"); 
   background-repeat: no-repeat;
   background-size: contain;
+}
+
 }
 
  @media screen and (min-width:1000px) and (max-width:2000px){
