--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 
 @media screen and (min-width:10px) and (max-width:900px){
    .box {
-  margin: 2px;
+  margin: 1px;
   width: 100%; 
   height: 600px; 
   border:1px solid #93B4C4; 
@@ -13,7 +13,7 @@
   margin: 0px;
   width: 100%; 
   height: 600px; 
-  border:1px solid #93B4C4; 
+  border:1px solid #95B5C5; 
   background-image: url("jpg 店内 image 1.JPG");
   background-repeat: no-repeat;
   background-size: contain;
@@ -38,8 +38,151 @@
   line-height: 20px;
 }
   
+   .catalog　box {
+  padding: 5px;
+  width: 100%; 
+  height: 600px; 
+  border:1px solid #90B0C0; 
+  background-color: rgba(250,250,250,0.2); 
+}
+
    .onebox {
+  margin: 15px;
+  width: 20%; 
+  height: 450px; 
+  border:1px solid #80B5C5; 
+  background-image: url("jpg ヘアカタログ 4.jpg"); 
+  background-repeat: no-repeat;
+  background-size: contain;
+  display: flex;
+  align-items: top;
+  justify-content: left;
+}
+   .2box {
+  margin: 15px;
+  width: 20%; 
+  height: 450px; 
+  border:1px solid #70B7C7; 
+  background-image: url("jpg ヘアカタログ 2.jpg"); 
+  background-repeat: no-repeat;
+  background-size: contain;
+  display: flex;
+  align-items: bottom;
+  justify-content: left;
+}
+   .Threebox {
+  margin: 15px;
+  width: 20%; 
+  height: 450px; 
+  border:1px solid #60B6C6; 
+  background-image: url("jpg ヘアカタログ 3.JPG"); 
+  background-repeat: no-repeat;
+  background-size: contain;
+  display: flex;
+  align-items: top;
+  justify-content: right;
+}
+   .Fourbox {
+  margin: 15px;
+  width: 20%; 
+  height: 450px; 
+  border:1px solid #50B5C5; 
+  background-image: url("jpg ヘアカタログ 1.JPG"); 
+  background-repeat: no-repeat;
+  background-size: contain;
+  display: flex;
+  align-items: bottom;
+  justify-content: right;
+}
+   .abox {
+  margin: 10px;
+  width: 30%; 
+  height: 500px; 
+  border:1px solid #40B4C4; 
+  background-image: url("jpg 店内 image 2.JPG"); 
+  background-repeat: no-repeat;
+  background-size: contain;
+}
+
+  .bbox {
+  margin: 10px;
+  width: 30%; 
+  height: 500px; 
+  border:1px solid #30B3C3; 
+  background-image: url("jpg メニュー image 1.jpg"); 
+  background-repeat: no-repeat;
+  background-size: contain;
+}
+  .cbox {
+  margin: 10px;
+  width: 30%; 
+  height: 500px; 
+  border:1px solid #20B2C2; 
+  background-image: url("jpg emiko image 1.JPG"); 
+  background-repeat: no-repeat;
+  background-size: contain;
+}
+
+  .dbox {
+  margin: 10px;
+  width: 30%; 
+  height: 500px; 
+  border:1px solid #10B10C10; 
+  background-image: url("jpg 店内 image 3.JPG"); 
+  background-repeat: no-repeat;
+  background-size: contain;
+}
+
+}
+
+ @media screen and (min-width:900px) and (max-width:2000px){
+   .box {
   margin: 2px;
+  width: 100%; 
+  height: 600px; 
+  border:1px solid #93B4C4; 
+  background-color: rgba(250,250,250,0.2); 
+}
+  
+   .minibox {
+  margin: 0px;
+  width: 100%; 
+  height: 600px; 
+  border:1px solid #93B4C4; 
+  background-image: url("jpg 店内 image 1.JPG");
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-position: center; 
+}
+  
+  .catalog　box {
+  padding: 5px;
+  width: 100%; 
+  height: 600px; 
+  border:1px solid #90B0C0; 
+  background-color: rgba(250,250,250,0.2); 
+}
+
+    .bar {
+   position: fixed; /* 固定配置 */
+   top: 10px;  /* 基点（ウィンドウ）からの距離 */
+   right: 20px;  /* 基点（ウィンドウ）からの距離 */
+   width: 20%;
+   border:1px solid #D49999; 
+   background-color:rgba(0,250,200,0.2);
+}
+  
+   p {
+  text-align:center; 
+  line-height: 60px;
+}
+  
+   .fixed p {
+  line-height: 20px;
+}
+  
+   .onebox {
+  margin: 15px;
   width: 20%; 
   height: 450px; 
   border:1px solid #93B4C4; 
@@ -51,7 +194,7 @@
   justify-content: left;
 }
    .2box {
-  margin: 2px;
+  margin: 15px;
   width: 20%; 
   height: 450px; 
   border:1px solid #93B4C4; 
@@ -63,7 +206,7 @@
   justify-content: left;
 }
    .Threebox {
-  margin: 2px;
+  margin: 15px;
   width: 20%; 
   height: 450px; 
   border:1px solid #93B4C4; 
@@ -75,7 +218,7 @@
   justify-content: right;
 }
    .Fourbox {
-  margin: 2px;
+  margin: 15px;
   width: 20%; 
   height: 450px; 
   border:1px solid #93B4C4; 
