--- a/style.css
+++ b/style.css
@@ -44,6 +44,7 @@
   height: 600px; 
   border:1px solid #90B0C0; 
   background-color: rgba(250,250,250,0.2); 
+  display: flex;
 }
 
    .onebox {
@@ -154,14 +155,6 @@
   background-size: contain;
   background-position: center; 
 }
-  
-  .catalog　box {
-  padding: 5px;
-  width: 100%; 
-  height: 600px; 
-  border:1px solid #90B0C0; 
-  background-color: rgba(250,250,250,0.2); 
-}
 
     .bar {
    position: fixed; /* 固定配置 */
@@ -181,6 +174,15 @@
   line-height: 20px;
 }
   
+   .wrapper {
+  padding: 5px;
+  width: 100%; 
+  height: 600px; 
+  border:1px solid #90B0C0; 
+  background-color: rgba(250,250,250,0.2); 
+  display: flex;
+}
+
    .onebox {
   margin: 15px;
   width: 20%; 
