--- a/style.css
+++ b/style.css
@@ -68,7 +68,7 @@
   background-repeat: no-repeat;
   background-size: contain;
   display: flex;
-  align-items: top;
+  align-items: bottom;
   justify-content: left;
 }
    .Threebox {
@@ -195,11 +195,11 @@
   align-items: top;
   justify-content: left;
 }
-   .2box {
+   .Twobox {
   margin: 15px;
   width: 20%; 
   height: 450px; 
-  border:1px solid #93B4C4; 
+  border:1px solid #70B7C7; 
   background-image: url("jpg ヘアカタログ 2.jpg"); 
   background-repeat: no-repeat;
   background-size: contain;
