--- a/style.css
+++ b/style.css
@@ -45,6 +45,8 @@
   border:1px solid #90B0C0; 
   background-color: rgba(250,250,250,0.2); 
   display: flex;
+  justify-content: space-between;
+
 }
 
    .onebox {
@@ -56,8 +58,7 @@
   background-repeat: no-repeat;
   background-size: contain;
   display: flex;
-  align-items: top;
-  justify-content: left;
+  align-items: flex-start
 }
    .Twobox {
   margin: 5px;
@@ -68,8 +69,7 @@
   background-repeat: no-repeat;
   background-size: contain;
   display: flex;
-  align-items: bottom;
-  justify-content: left;
+  align-items: flex-end
 }
    .Threebox {
   margin: 5px;
@@ -80,8 +80,7 @@
   background-repeat: no-repeat;
   background-size: contain;
   display: flex;
-  align-items: top;
-  justify-content: right;
+  align-items: flex-start
 }
    .Fourbox {
   margin: 5px;
@@ -92,8 +91,7 @@
   background-repeat: no-repeat;
   background-size: contain;
   display: flex;
-  align-items: bottom;
-  justify-content: right;
+  align-items: flex-end
 }
    .abox {
   margin: 10px;
