--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@
   height: 750px; 
   border:1px solid #93B4C4; 
   background-color: rgba(250,250,250,0.2); 
+  display: flex;    
 }
   
    .minibox {
@@ -50,7 +51,7 @@
   margin: 0px;
   width: 80%; 
   height: 360px; 
-  border:1px solid #80B5C5; 
+  border:1px solid #60B5C5; 
   display: flex;
   justify-content: space-around;
 }
@@ -59,7 +60,7 @@
   margin: 0px;
   width: 100%; 
   height: 360px; 
-  border:1px solid #80B5C5; 
+  border:1px solid #40B5C5; 
   display: flex;
   justify-content: flex-end;/*右寄せで配置*/
 }
@@ -68,7 +69,7 @@
   margin: 0px;
   width: 80%; 
   height: 360px; 
-  border:1px solid #80B5C5; 
+  border:1px solid #20B5C5; 
   display: flex;
   justify-content: space-around;
 }
@@ -77,7 +78,7 @@
   margin: 1px;
   width: ; 
   height: 360px;
-  border:1px solid #80B5C5; 
+  border:1px solid #10B5C5; 
   background-image: url("jpg ヘアカタログ 4.jpg"); 
   background-repeat: no-repeat;
   background-size: contain;
@@ -157,6 +158,7 @@
   height: 850px; 
   border:1px solid #93B4C4; 
   background-color: rgba(250,250,250,0.2); 
+  display: flex;
 }
   
    .minibox {
@@ -200,7 +202,7 @@
   margin: 0px;
   width: 80%; 
   height: 460px; 
-  border:1px solid #80B5C5; 
+  border:1px solid #60B5C5; 
   display: flex;
   justify-content: space-around;
 }
@@ -209,7 +211,7 @@
   margin: 0px;
   width: 100%; 
   height: 460px; 
-  border:1px solid #80B5C5; 
+  border:1px solid #40B5C5; 
   display: flex;
   justify-content: flex-end;/*右寄せで配置*/
 }
@@ -218,7 +220,7 @@
   margin: 0px;
   width: 80%; 
   height: 460px; 
-  border:1px solid #80B5C5; 
+  border:1px solid #20B5C5; 
   display: flex;
   justify-content: space-around;
 }
@@ -227,7 +229,7 @@
   margin: 1px;
   width: ; 
   height: 460px;
-  border:1px solid #80B5C5; 
+  border:1px solid #10B5C5; 
   background-image: url("jpg ヘアカタログ 4.jpg"); 
   background-repeat: no-repeat;
   background-size: contain;
