--- a/style.css
+++ b/style.css
@@ -3,9 +3,9 @@
 @media screen and (min-width:10px) and (max-width:900px){
    .box {
   margin: 0px;
-  width: 100%; 
+  width: 105%; 
   height: 750px; 
-  border:1px solid #93B4C4; 
+  border:1px solid #90B45C25; 
   background-color: rgba(250,250,250,0.2); 
 }
   
@@ -13,7 +13,7 @@
   margin: 0px;
   width: 100%; 
   height: 730px; 
-  border:1px solid #95B5C5; 
+  border:1px solid #70B35C15; 
   background-image: url("jpg 店内 image 1.JPG");
   background-repeat: no-repeat;
   background-size: contain;
@@ -38,19 +38,27 @@
   line-height: 20px;
 }
 
+   .wrapper {
+  margin: 0px;
+  width: 100%; 
+  height: 747px; 
+  border:1px solid #50B25C15; 
+  display: flex;
+}
+
 .Ue flexbox {
   margin: 0px;
   width: 100%; 
   height: 360px; 
-  border:1px solid #80B5C5; 
+  border:1px solid #80B40C20; 
   display: flex;
   justify-content: flex-start;/*左寄せで配置*/
 }
 .ue flexbox {
   margin: 0px;
-  width: 80%; 
+  width: 70%; 
   height: 360px; 
-  border:1px solid #60B5C5; 
+  border:1px solid #60B30C15; 
   display: flex;
   justify-content: space-around;
 }
@@ -59,16 +67,16 @@
   margin: 0px;
   width: 100%; 
   height: 360px; 
-  border:1px solid #40B5C5; 
+  border:1px solid #40B20C10; 
   display: flex;
   justify-content: flex-end;/*右寄せで配置*/
 }
 
 .sita flexbox {
   margin: 0px;
-  width: 80%; 
+  width: 70%; 
   height: 360px; 
-  border:1px solid #20B5C5; 
+  border:1px solid #20B10C5; 
   display: flex;
   justify-content: space-around;
 }
@@ -86,7 +94,7 @@
   margin: 1px;
   width: ; 
   height: 360px; 
-  border:1px solid #70B7C7; 
+  border:1px solid #30B15C5; 
   background-image: url("jpg ヘアカタログ 2.jpg"); 
   background-repeat: no-repeat;
   background-size: contain;
@@ -95,7 +103,7 @@
   margin: 1px;
   width: ; 
   height: 360px; 
-  border:1px solid #60B6C6; 
+  border:1px solid #20B45C90; 
   background-image: url("jpg ヘアカタログ 3.JPG"); 
   background-repeat: no-repeat;
   background-size: contain;
@@ -104,7 +112,7 @@
   margin: 1px;
   width: ; 
   height: 360px; 
-  border:1px solid #50B5C5; 
+  border:1px solid #15B35C70; 
   background-image: url("jpg ヘアカタログ 1.JPG"); 
   background-repeat: no-repeat;
   background-size: contain;
@@ -152,10 +160,10 @@
 
  @media screen and (min-width:900px) and (max-width:2000px){
    .box {
-  margin: 2px;
-  width: 100%; 
+  margin: 0px;
+  width: 105%; 
   height: 850px; 
-  border:1px solid #93B4C4; 
+  border:1px solid #90B45C25; 
   background-color: rgba(250,250,250,0.2); 
 }
   
@@ -163,7 +171,7 @@
   margin: 0px;
   width: 100%; 
   height: 850px; 
-  border:1px solid #95B5C5; 
+  border:1px solid #90B45C25; 
   background-image: url("jpg 店内 image 1.JPG");
   background-repeat: no-repeat;
   background-size: contain;
@@ -188,19 +196,27 @@
   line-height: 20px;
 }
 
+   .wrapper {
+  margin: 2px;
+  width: 100%; 
+  height: 847px; 
+  border:1px solid #50B25C15; 
+  display: flex;
+}
+
 .Ue flexbox {
   margin: 0px;
   width: 100%; 
   height: 460px; 
-  border:1px solid #80B5C5; 
+  border:1px solid #80B40C20; 
   display: flex;
   justify-content: flex-start;/*左寄せで配置*/
 }
 .ue flexbox {
   margin: 0px;
-  width: 80%; 
+  width: 70%; 
   height: 460px; 
-  border:1px solid #60B5C5; 
+  border:1px solid #60B30C15; 
   display: flex;
   justify-content: space-around;
 }
@@ -209,7 +225,7 @@
   margin: 0px;
   width: 100%; 
   height: 460px; 
-  border:1px solid #40B5C5; 
+  border:1px solid #40B20C10; 
   display: flex;
   justify-content: flex-end;/*右寄せで配置*/
 }
@@ -218,7 +234,7 @@
   margin: 0px;
   width: 80%; 
   height: 460px; 
-  border:1px solid #20B5C5; 
+  border:1px solid ##20B10C5; 
   display: flex;
   justify-content: space-around;
 }
@@ -236,7 +252,7 @@
   margin: 1px;
   width: ; 
   height: 460px; 
-  border:1px solid #70B7C7; 
+  border:1px solid #30B15C5; 
   background-image: url("jpg ヘアカタログ 2.jpg"); 
   background-repeat: no-repeat;
   background-size: contain;
@@ -245,7 +261,7 @@
   margin: 1px;
   width: ; 
   height: 460px; 
-  border:1px solid #60B6C6; 
+  border:1px solid #20B45C90; 
   background-image: url("jpg ヘアカタログ 3.JPG"); 
   background-repeat: no-repeat;
   background-size: contain;
@@ -254,7 +270,7 @@
   margin: 1px;
   width: ; 
   height: 460px; 
-  border:1px solid #50B5C5; 
+  border:1px solid #15B35C70; 
   background-image: url("jpg ヘアカタログ 1.JPG"); 
   background-repeat: no-repeat;
   background-size: contain;
